--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -1,5 +1,5 @@
 /* H5BP styles. */
-@import "../vendor/h5bp/css/style.css";
+@import "../../vendor/assets/h5bp/css/style.css";
 
 /* Add Stylus stylesheets here, alll files ending in .styl will be compiled!
  * For example: @import "main.styl";
