--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -8,31 +8,37 @@
  *
  */ 
 
-@import "screen.css";
-
 /* Put development-only CSS below this line. */
 
-div.word {
-  display: inline;
-  -webkit-transition: linear all 1s;
-  font-size: 20px;
-  cursor: pointer;
+
+
+#transcript {
+	width: 1200px;
 }
 
-div.word.expand {
-  font-size: 100px;
+.moderator {
+	width: 400px;
+	padding-left:400px;
+	display: block;
+	color: gray;
 }
 
-div.word.fade, div.word.expand ~ div.word {
-  opacity: .1;
+.obama {
+	width: 600px;
+	padding-right:600px;
+	display: block;
+	color: purple;
 }
 
-div#status {
-  display: none;
-  position: absolute;
-  border: 1px solid #CCC;
-  z-index: 200;
-  padding: 10px;
-  padding-right: 40px;
-  background: #FFF;
+.romney {
+	width: 600px;
+	padding-left: 600px;
+	display: block;
+	color: green;
+}
+
+.speakerName {
+	font-size: 400%;
+	font-weight: bold;
+	display: block;
 }
