--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -16,6 +16,11 @@
 	width: 1200px;
 }
 
+#newWordMeta {
+	position: absolute;
+	font-size: 200%;
+}
+
 .moderator {
 	width: 400px;
 	padding-left:400px;
