--- a/app/templates/word/detail.html
+++ b/app/templates/word/detail.html
@@ -3,4 +3,10 @@
   <p class="occurred">SPOKEN <%= word["wordInstances"] %> TIMES</p>
 <% } else { %>  
   <p class="occurred">SPOKEN <%= word["wordInstances"] %> TIME</p>
-<% } } %>
+<% } %>
+<p class="cat">
+<% for (var i=0; i<word["cats"].length; i++) { %>
+  <%= word["cats"][i] %> 
+<% } %>
+</p>
+<% } %>
