loading history on start now

--- a/app/templates/word/detail.html
+++ b/app/templates/word/detail.html
@@ -5,8 +5,8 @@
   <p class="occurred">SPOKEN <%= word["wordInstances"] %> TIME</p>
 <% } %>
 <p class="cat">
-<% for (var i=0; i<word["cats"].length; i++) { %>
+<% if (word["cats"]) { for (var i=0; i<word["cats"].length; i++) { %>
   <%= word["cats"][i] %> 
-<% } %>
+<% } }%>
 </p>
 <% } %>
