more work on comparisons

--- a/app/templates/comparison/item.html
+++ b/app/templates/comparison/item.html
@@ -1,1 +1,9 @@
-<%= word.get("word") %>
+<div>
+	<ul>
+		<% comparison.get("traits").forEach(function(trait){ %>
+			<li><%= trait.title %></li>
+		<% }); %>
+	</ul>
+</div>
+
+
