--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -14,6 +14,7 @@
 
 #transcript {
 	width: 1200px;
+	font-family: serif;
 }
 
 .moderator {
@@ -40,5 +41,16 @@
 .speakerName {
 	font-size: 400%;
 	font-weight: bold;
+	font-family: Helvetica;
 	display: block;
 }
+
+.comparison {
+	background-color: yellow;
+	width: 1024px;
+	height: 768px;
+	font-family: Helvetica;
+	font-size: 64px;
+	font-color: black;
+}
+
