--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -14,6 +14,7 @@
 
 #transcript {
 	width: 1200px;
+	overflow-y: scroll;
 }
 
 #newWordMeta {
@@ -46,4 +47,16 @@
 	font-size: 400%;
 	font-weight: bold;
 	display: block;
+}
+
+#navigation {
+	position: fixed;
+	padding: 10px;
+}
+
+.chapterButton {
+	color: white;
+	background-color: black;
+	padding: 1px 4px 1px 2px;
+	margin: 2px;
 }
