Beginnings of an event-based message passing model between different views/collections. Reconfigured transcript, navigation, and messages to listen for or trigger "words:new" and "chapters:jump" messages.

--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -62,6 +62,13 @@
 	padding: 1px 4px 1px 2px;
 	margin: 2px;
 }
+.future {
+  color: #3A434C;
+}
+.current {
+  color: #C2E0FF;
+  font-weight: bold;
+}
 
 .comparison {
 	background-color: yellow;
