--- a/app/templates/layouts/main.html
+++ b/app/templates/layouts/main.html
@@ -1,4 +1,8 @@
 <div id="navigation"></div>
 <div id="newWordMeta"></div>
 <div id="comparisons"></div>
-<div id="transcript"></div>
+<div class="speaker layer"><div class="wrapper">
+  <div class="pieChart"></div>
+  <span class="close">Close</span>
+</div></div>
+<div id="transcript" class="layer container_6 transcript"><div class="wrapper"></div></div>
