integrated blueprint grid and typekit

--- a/app/templates/layouts/main.html
+++ b/app/templates/layouts/main.html
@@ -5,4 +5,4 @@
   <div class="pieChart"></div>
   <span class="close">Close</span>
 </div></div>
-<div id="transcript" class="layer container_6 transcript"><div class="wrapper"></div></div>
+<div id="transcript" class="layer container transcript"><div class="wrapper"></div></div>
