--- a/app/templates/navigation.html
+++ b/app/templates/navigation.html
@@ -1,5 +1,6 @@
 <div id="navTimeline">
   <div id="navProgressBar"></div>
+  <div id="navProgressMarker"></div>
 </div>
 <div id="navBar">
 <span class="franklinMedIt navTitle gray80" id="navTitle">ReConstitution</span>
