--- a/app/templates/layouts/main.html
+++ b/app/templates/layouts/main.html
@@ -6,3 +6,4 @@
   <span class="close">Close</span>
 </div></div>
 <div id="transcript" class="layer container transcript"><div class="wrapper"></div></div>
+<div id="overlay" class="layer container"></div>
