--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -65,6 +65,10 @@ p { /* Transcript text */
 	background-color: rgb(64, 180, 230);	
 }
 
+.frequentWord {
+	background-color: rgb(255,255,255);
+}
+
 .fade {
   -webkit-transform: scale(.4);
   opacity: .5;
