reconfig main layout for scrolling, got overlay positioning working

--- a/app/templates/layouts/main.html
+++ b/app/templates/layouts/main.html
@@ -4,5 +4,17 @@
   <div class="pieChart"></div>
   <span class="close">Close</span>
 </div></div>
-<div id="transcript" class="layer container transcript"><div class="wrapper"></div></div>
-<div id="overlay" class="layer container"></div>
+<div id="transcript" class="layer container transcript">
+	<div class="wrapper">
+		<div id="overlay" class="layer container"></div>
+		<!-- Grid test
+		<div class="span-1" style="position:absolute; height:100px; background-color:yellow;"></div>
+		<div class="push-1 span-1" style="position:absolute; height:100px; background-color:yellow;"></div>
+		<div class="push-2 span-1" style="position:absolute; height:100px; background-color:yellow;"></div>
+		<div class="push-3 span-1" style="position:absolute; height:100px; background-color:yellow;"></div>
+		<div class="push-4 span-1" style="position:absolute; height:100px; background-color:yellow;"></div>
+		<div class="push-5 span-1" style="position:absolute; height:100px; background-color:yellow;"></div>
+		-->
+	</div>
+</div>
+
