--- a/app/templates/overlays/trait.html
+++ b/app/templates/overlays/trait.html
@@ -1,8 +1,8 @@
 <div class="container">
 <% if(leader=="obama") { %>
-	<div class="traitExpTextHolder overlay push-1" style="bottom:<%= startPosY + 2*96 %>px;"><p class="franklinDemiIt traitExpText"><%= leader.toUpperCase() %> IS NOW </p></div>
-	<div class="traitExpTextHolder overlay push-1" style="bottom:<%= startPosY + 96 %>px;"><p class="franklinDemiIt traitExpText">MORE <%= trait %> <p></div>
-	<div class="traitExpTextHolder overlay push-1" style="bottom:<%= startPosY %>px;"><p class="franklinDemiIt traitExpText">THAN <%= trailer.toUpperCase() %> </p></div>
+	<div class="traitExpTextHolder overlay push-1" style="top:<%= startPosY - 2*96 %>px;"><p class="franklinDemiIt traitExpText"><%= leader.toUpperCase() %> IS NOW </p></div>
+	<div class="traitExpTextHolder overlay push-1" style="top:<%= startPosY - 96 %>px;"><p class="franklinDemiIt traitExpText">MORE <%= trait %> <p></div>
+	<div class="traitExpTextHolder overlay push-1" style="top:<%= startPosY %>px;"><p class="franklinDemiIt traitExpText">THAN <%= trailer.toUpperCase() %> </p></div>
 <% }else{ %>
 	<div class="traitExpTextHolder overlay push-3"><p class="franklinDemiIt traitExpText"><%= leader.toUpperCase() %> IS NOW</p></div>
 	<div class="traitExpTextHolder overlay push-3"><p class="franklinDemiIt traitExpText">MORE <%= trait %><p></div>
