--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -19,12 +19,14 @@
  
 
 body {
-  background: -webkit-linear-gradient(left, #9699A0, #C9D1CF, #C9D1CF, #9699A0);
+  /* background: -webkit-linear-gradient(left, #9699A0, #C9D1CF, #C9D1CF, #9699A0); */
+  background-color: rgb(140,146,146);	
 }
 
 .layer {
   position: absolute;
   top: 0; left: 0; bottom: 0; right: 0;
+  overflow:visible;
 }
 
 .wrapper {
@@ -33,13 +35,14 @@ body {
   overflow-y: scroll;
   overflow-x: visible;
   
-   -webkit-perspective: 6000px;
+  /* -webkit-perspective: 6000px;	*/
 }
 
 
 .transcript .wrapper {
   -webkit-transition: -webkit-transform .5s linear; 
   transition: all .5s linear;
+  overflow:visible;
   /* overflow-x: hidden; */
   /* background-color: yellow; */
 }
@@ -245,8 +248,12 @@ p { /* Transcript text */
 	margin: 0px 0px 0px 0px;
 	padding: 0px 0px 0px 0px;
 	/* background-color:yellow; */
+
+	-webkit-perspective: 1000px;
+	-webkit-transform-origin: 50% 50%;
+	-webkit-transition: -webkit-transform 1s ease-in;	
+	-webkit-transform: translateZ(0px);	
 	
-	-webkit-transform: translateZ(100px);	
 }
 
 .traitExpText {
@@ -266,7 +273,9 @@ p { /* Transcript text */
 	line-height:100px;
 	left:-450px;	/* Start out of view */
 
-	-webkit-transform: translateZ(100px);
+	-webkit-perspective: 1000px;
+	-webkit-transform-origin: 50% 50%;
+	-webkit-transform: translateZ(0px);
 }
 
 /*
