--- a/app/templates/layouts/main.html
+++ b/app/templates/layouts/main.html
@@ -1,8 +1,8 @@
 <div id="navigation"></div>
-<div id="comparisons"></div>
-<div class="speaker layer"><div class="wrapper">
+<div class="comparisons"><div class="wrapper">
   <div class="pieChart"></div>
+  <div id="comparisons"></div>
   <span class="close">Close</span>
 </div></div>
 <div id="transcript" class="layer container transcript"><div class="wrapper"></div></div>
-<div id="overlay" class="layer container"></div>
+<!--<div id="overlay" class="layer container"></div> PEND TEMP for testing overlays-->
