--- a/splash.css
+++ b/splash.css
@@ -1,8 +1,8 @@
 #main {
-  /*width: 100%;*/
-  height: 100%;
-  overflow-x: hidden;
-  margin: 0px;
+  width: 1024px;
+  position: absolute;
+  left: 50%;
+  margin-left: -512px;
 }
 
 body {
@@ -31,15 +31,16 @@ sup {
   margin: 0px;
 }
 #titleUnderlayA {
+  background: url(../images/marker_back.png);
   position: absolute;
-  background-color: white;
-  height: 96px;
-  width: 512px;
-  top: -5px;
-  left: 0px;
+  height: 204px;
+  width: 530px;
+  top: -12px;
+  left: -20px;
   z-index: -1;
 }
 #titleUnderlayB {
+  display: none;
   position: absolute;
   background-color: white;
   height: 84px;
