--- a/splash.css
+++ b/splash.css
@@ -8,6 +8,7 @@
 body {
   margin: 0px;
   padding: 0px;
+  background-color:rgb(130,130,130);
 }
 
 sup {
@@ -243,7 +244,8 @@ sup {
   font-size: 800px;
   line-height: 600px;
   font-family:"ff-meta-serif-web-pro"; font-weight:700; font-style:italic;
-  color: #8A8A8A;
+  /* color: #8A8A8A; */
+  color: rgb(160,160,160);
   opacity: 0.25;
   left: 0px;
   top:  0px;
