--- a/app/templates/layouts/main.html
+++ b/app/templates/layouts/main.html
@@ -16,6 +16,7 @@
 		<div class="push-4 span-1" style="position:absolute; height:100%; background-color:white; opacity:0.1;"></div>
 		<div class="push-5 span-1" style="position:absolute; height:100%; background-color:white; opacity:0.1;"></div>
 
+		<!-- EG Testing parallax
 		<span class="testZ" style="top:100px;">one</span>
 		<span class="testZ" style="top:200px;">two</span>
 		<span class="testZ" style="top:300px;">three</span>
@@ -47,6 +48,7 @@
 		<span class="testZno" style="top:1300px;">thirteen</span>
 		<span class="testZno" style="top:1400px;">fourteen</span>
 		<span class="testZno" style="top:1500px;">fifteen</span>
+		-->
 	</div>
 </div>
 
