added adjusted parallax grid coords to ref, and test parallax objects

--- a/app/templates/layouts/main.html
+++ b/app/templates/layouts/main.html
@@ -16,39 +16,23 @@
 		<div class="push-4 span-1" style="position:absolute; height:100%; background-color:white; opacity:0.1;"></div>
 		<div class="push-5 span-1" style="position:absolute; height:100%; background-color:white; opacity:0.1;"></div>
 
-		<!-- EG Testing parallax
-		<span class="testZ" style="top:100px;">one</span>
-		<span class="testZ" style="top:200px;">two</span>
-		<span class="testZ" style="top:300px;">three</span>
-		<span class="testZ" style="top:400px;">four</span>
-		<span class="testZ" style="top:500px;">five</span>
-		<span class="testZ" style="top:600px;">six</span>
-		<span class="testZ" style="top:700px;">seven</span>
-		<span class="testZ" style="top:800px;">eight</span>
-		<span class="testZ" style="top:900px;">nine</span>
-		<span class="testZ" style="top:1000px;">ten</span>
-		<span class="testZ" style="top:1100px;">eleven</span>
-		<span class="testZ" style="top:1200px;">twelve</span>
-		<span class="testZ" style="top:1300px;">thirteen</span>
-		<span class="testZ" style="top:1400px;">fourteen</span>
-		<span class="testZ" style="top:1500px;">fifteen</span>
+
+		<!--
+		<span id="testZ1" class="testZ" style="left: 0px; top:600px;">one</span>
+		<span id="testZ2" class="testZ" style="left:160px; top:600px;">two</span>
+		<span id="testZ3" class="testZ" style="left:320px; top:600px;">three</span>
+		<span id="testZ4" class="testZ" style="left:480px; top:600px;">four</span>
+		<span id="testZ5" class="testZ" style="left:640px; top:600px;">five</span>
+		<span id="testZ6" class="testZ" style="left:800px; top:600px;">six</span>
 		
-		<span class="testZno" style="top:100px;">one</span>
-		<span class="testZno" style="top:200px;">two</span>
-		<span class="testZno" style="top:300px;">three</span>
-		<span class="testZno" style="top:400px;">four</span>
-		<span class="testZno" style="top:500px;">five</span>
-		<span class="testZno" style="top:600px;">six</span>
-		<span class="testZno" style="top:700px;">seven</span>
-		<span class="testZno" style="top:800px;">eight</span>
-		<span class="testZno" style="top:900px;">nine</span>
-		<span class="testZno" style="top:1000px;">ten</span>
-		<span class="testZno" style="top:1100px;">eleven</span>
-		<span class="testZno" style="top:1200px;">twelve</span>
-		<span class="testZno" style="top:1300px;">thirteen</span>
-		<span class="testZno" style="top:1400px;">fourteen</span>
-		<span class="testZno" style="top:1500px;">fifteen</span>
+		<span class="testZno" style="top:600px;">one</span>
+		<span class="testZno push-1" style="top:600px;">two</span>
+		<span class="testZno push-2" style="top:600px;">three</span>
+		<span class="testZno push-3" style="top:600px;">four</span>
+		<span class="testZno push-4" style="top:600px;">five</span>
+		<span class="testZno push-5" style="top:600px;">six</span>
 		-->
+		
 	</div>
 </div>
 
