--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -57,9 +57,11 @@ body {
 }
 
 .testZ {
-	color: white;
+	color: rgb(20,20,20);
+	width:50px;
+	background-color:red;
 	position:absolute;
-	-webkit-transform: translateZ(200px);	
+	/* -webkit-transform: translateZ(150px);	*/
 }
 
 .testZno {
@@ -300,7 +302,7 @@ p { /* Transcript text */
 #transcript .wordCount {
   position: relative;
   top: 1em;
-  color: white;
+  color: rgb(207,255,36);
 }
 
 /*
