--- a/app/templates/comparison/list.html
+++ b/app/templates/comparison/list.html
@@ -11,7 +11,7 @@
 					<div class="comparisonBarGraph push-3 span-2" style="height:300px; top: 250px;" >
 						<p class="franklinDemiCompIt barGraphText" > Romney </p>  </div>
 					
-					<!-- top 10 -->					
+					<!-- Obama top 10 -->					
 					<div style="position:absolute;">
 					<ul class="comparisonList franklinDemiCompIt"> 
 					<li> going </li>
@@ -27,7 +27,7 @@
 					</ul>
 					</div>
 
-					<!-- 10-20 -->					
+					<!-- Obama 10-20 -->					
 					<div class="push-1" style="position:absolute;">
 					<ul class="comparisonList franklinDemiCompIt"> 
 					<li> sure </li>
@@ -43,7 +43,7 @@
 					</ul>
 					</div>
 					
-					<!-- top 10 values-->										
+					<!-- Obama top 10 values-->										
 					<div class = "span-1" style="position:absolute;">
 					<ul class="comparisonListValue franklinDemiComp"> 
 					<li> 51 </li>
@@ -59,7 +59,7 @@
 					</ul>
 					</div>
 					
-					<!-- 10-20 values-->										
+					<!-- Obama 10-20 values-->										
 					<div class="push-1 span-1" style="position:absolute;">
 					<ul class="comparisonListValue franklinDemiComp"> 
 					<li> 21 </li>
@@ -75,7 +75,7 @@
 					</ul>					
 					</div>
 					
-										<!-- top 10 -->					
+										<!-- Romney top 10 -->					
 					<div class="push-3" style="position:absolute;">
 					<ul class="comparisonList franklinDemiCompIt"> 
 					<li> president </li>
@@ -91,7 +91,7 @@
 					</ul>
 					</div>
 
-					<!-- 10-20 -->					
+					<!-- Romney 10-20 -->					
 					<div class="push-4" style="position:absolute;">
 					<ul class="comparisonList franklinDemiCompIt"> 
 					<li> going </li>
@@ -107,7 +107,7 @@
 					</ul>
 					</div>
 					
-					<!-- top 10 values-->										
+					<!-- Romney top 10 values-->										
 					<div class="push-3 span-1" style="position:absolute;">
 					<ul class="comparisonListValue franklinDemiComp"> 
 					<li> 55 </li>
@@ -123,7 +123,7 @@
 					</ul>
 					</div>
 					
-					<!-- 10-20 values-->										
+					<!-- Romney 10-20 values-->										
 					<div class="push-4 span-1" style="position:absolute;">
 					<ul class="comparisonListValue franklinDemiComp"> 
 					<li> 21 </li>
