--- a/app/styles/screen.css
+++ b/app/styles/screen.css
@@ -147,6 +147,7 @@ input.span-6, textarea.span-6 {width:924px;}
 .pull-5 {margin-left:-800px;}
 .pull-6 {margin-left:-960px;}
 .pull-1, .pull-2, .pull-3, .pull-4, .pull-5, .pull-6 {float:left;position:relative;}
+.push-0 {margin:0 0px 1.5em 0px;}	/* soso */
 .push-1 {margin:0 -160px 1.5em 160px;}
 .push-2 {margin:0 -320px 1.5em 320px;}
 .push-3 {margin:0 -480px 1.5em 480px;}
