--- a/app/templates/layouts/main.html
+++ b/app/templates/layouts/main.html
@@ -4,17 +4,19 @@
   <span class="close">     Close</span>
 </div></div>
 
+<div id="bigWords"></div>
 <div id="transcript" class="layer container transcript">
 	<div class="wrapper">
 		<div id="overlay" class="container"></div>
 		<!-- Grid test -->
-		<div class="span-1" style="position:absolute; height:100%; background-color:white; opacity:0.1"></div>
-		<div class="push-1 span-1" style="position:absolute; height:100%; background-color:white; opacity:0.1;"></div>
-		<div class="push-2 span-1" style="position:absolute; height:100%; background-color:white; opacity:0.1;"></div>
-		<div class="push-3 span-1" style="position:absolute; height:100%; background-color:white; opacity:0.1;"></div>
-		<div class="push-4 span-1" style="position:absolute; height:100%; background-color:white; opacity:0.1;"></div>
-		<div class="push-5 span-1" style="position:absolute; height:100%; background-color:white; opacity:0.1;"></div>
-
+		<div id="testGrid">
+			<div class="span-1" style="position:absolute; height:200%; background-color:white; opacity:0.02"></div>
+			<div class="push-1 span-1" style="position:absolute; height:200%; background-color:white; opacity:0.02;"></div>
+			<div class="push-2 span-1" style="position:absolute; height:200%; background-color:white; opacity:0.02;"></div>
+			<div class="push-3 span-1" style="position:absolute; height:200%; background-color:white; opacity:0.02;"></div>
+			<div class="push-4 span-1" style="position:absolute; height:200%; background-color:white; opacity:0.02;"></div>
+			<div class="push-5 span-1" style="position:absolute; height:200%; background-color:white; opacity:0.02;"></div>
+		</div>
 
 		<!--
 		<span id="testZ1" class="testZ" style="left: 0px; top:600px;">one</span>
