--- a/app/templates/overlays/wordCount.html
+++ b/app/templates/overlays/wordCount.html
@@ -7,10 +7,12 @@
 		<div class="wordCountTextHolder over" style="left: <%= grid[0] %>px; top:<%= posY - 2*120 %>px;"><p class="franklinDemiComp wordCountText"><%= count %>th<p></div>
 		<div class="wordCountTextHolder over" style="left: <%= grid[0] %>px; top:<%= posY - 120 %>px;"><p class="franklinDemiComp wordCountText">WORD WAS</p></div>
 		<div class="wordCountTextHolder over" style="left: <%= grid[0] %>px; top:<%= posY %>px;"><p class="metaBold wordCountWord"><%= word %></p></div>
+		<hr class="wordCountLine" style="left:<%= wordX %>px; top: <%= lineY %>px;"></hr>
 	<% }else{ %>
 		<div class="wordCountTextHolder over" style="left: <%= grid[2] %>px;  top:<%= posY - 3*120 %>px;"><p class="franklinDemiComp wordCountText"><%= speaker.toUpperCase() %>'S</p></div>
 		<div class="wordCountTextHolder over" style="left: <%= grid[2] %>px; top:<%= posY - 2*120 %>px;"><p class="franklinDemiComp wordCountText"><%= count %>th<p></div>
 		<div class="wordCountTextHolder over" style="left: <%= grid[2] %>px; top:<%= posY - 120 %>px;"><p class="franklinDemiComp wordCountText">WORD WAS</p></div>
 		<div class="wordCountTextHolder over" style="left: <%= grid[2] %>px; top:<%= posY %>px;"><p class="metaBold wordCountWord"><%= word %></p></div>
+		<hr class="wordCountLine" style="left:<%= grid[2] %>px; top: <%= lineY %>px;"></hr>
 	<% } %>
 </div>
