--- a/app/templates/comparison/emotion.html
+++ b/app/templates/comparison/emotion.html
@@ -32,62 +32,39 @@
 			<p class="franklinDemiCompIt barGraphText" > Romney </p>  <p class="franklinDemiComp barGraphValue" > <%=  Math.round(10000*val1)/100 %>  </p> </div>
 		
 		<% comparison.get("traits").forEach(function(trait){ %>
+		
 			<% if (trait.name == "posemo") { %> 
 				
 				<% var people = ["Palin 2008", "Obama 2008", "Kerry 2004", "Nixon 1960"];
-				var values = [4.18, 3.58, 2.88, 1.94];
-				var valueStrings = ["4.18", "3.58", "2.88", "1.94"];
-				
-				for (var i = 0; i < 4 ; i++) {
-				
-				 %>
-				
-					<div class="comparisonLineContainer" style="top:<%= mapVal(values[i]/100.0)[1] %>px"> 
-					<p class="franklinDemiCompIt comparisonPastCandidate" style="top:-50px" > <%=people[i] %></p>
-					<hr class="span-5" /> 
-					<p class="franklinDemiComp comparisonPastValue" style="top:-15px" > <%=valueStrings[i]%> </p> 
-					</div>
-					
-				<% } %>
-
+				var values = [4.18, 3.58, 2.88, 1.94]; %>
 				
 			<% } else if (trait.name == "negemo") {%>
 			
-				<% var people = ["Nixon 1960", "Bush 2000", "Reagan 1984", "Bush 2004"];
-				var values = [0.81, 1.02, 1.59, 3.23];
-				var valueStrings = ["0.81", "1.02", "1.59", "3.23"];
-				
-				for (var i = 0; i < 4 ; i++) {
-				
-				 %>
-				
-					<div class="comparisonLineContainer" style="top:<%= mapVal(values[i]/100.0)[1] %>px"> 
-					<p class="franklinDemiCompIt comparisonPastCandidate" style="top:-50px" > <%=people[i] %></p>
-					<hr class="span-5" /> 
-					<p class="franklinDemiComp comparisonPastValue" style="top:-15px" > <%=valueStrings[i]%> </p> 
-					</div>
-					
-				<% } %>
+				<% var people = ["Bush 2000", "Reagan 1984", "McCain 2008","Bush 2004"];
+				var values = [1.02, 1.59, 2.39, 3.23]; %>
 				
 			<% } else if (trait.name == "anger") {%>
 			
-				<% var people = ["Kennedy 1960", "Obama 2008", "Bush 1992", "Kerry 2004"];
-				var values = [0.32, 0.32, 0.97, 1.6];
-				var valueStrings = ["0.32", "0.32", "0.97", "1.6"];
-				
-				for (var i = 0; i < 4 ; i++) {
-				
-				 %>
+				<% var people = ["Kennedy 1960", "Biden 2008", "Bush 1992", "Kerry 2004"];
+				var values = [0.32, 0.58, 0.97, 1.6]; %>
+			
+			<% } else if (trait.name == "funct") {%>
+			
+				<% var people = ["Kennedy 1960", "Biden 2008", "Bush 1992", "Kerry 2004"];
+				var values = [20, 30, 40, 50]; %>
+			
+			<% } %>
+			
+			
+				<% for (var i = 0; i < 4 ; i++) { %>
 				
 					<div class="comparisonLineContainer" style="top:<%= mapVal(values[i]/100.0)[1] %>px"> 
 					<p class="franklinDemiCompIt comparisonPastCandidate" style="top:-50px" > <%=people[i] %></p>
 					<hr class="span-5" /> 
-					<p class="franklinDemiComp comparisonPastValue" style="top:-15px" > <%=valueStrings[i]%> </p> 
+					<p class="franklinDemiComp comparisonPastValue" style="top:-15px" > <%=values[i]%> </p> 
 					</div>
-					
-				<% } %>	
 			
-			<% } %>
+				<% } %>
 			
 		<% }); %>
 
