got numbers detection working

--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -284,7 +284,7 @@ hr {
 .fgBlue{ color:rgb(64,180,229); }
 .bgBlue{ background-color:rgb(64,180,229); }
 .lime{ color:rgb(207,255,36); }
-
+.salmon{ color:rgb(255,157,108); }
 
 /* Overlays */
 
